# pong

./: README.md  bpt.yaml  meson.build
include/: meson.build
include/entities/: ball.hxx  meson.build  paddle.hxx
include/states/: control_menu.hxx  game.hxx  id.hxx  menu.hxx  meson.build  pause_menu.hxx  sample.hxx  start_screen.hxx
include/utils/: match.hxx  meson.build  src.hxx
src/: meson.build
src/states/: control_menu.cxx  game.cxx  menu.cxx  meson.build  pause_menu.cxx  sample.cxx  start_screen.cxx
src/utils/: meson.build  src.cxx
subprojects/: crank.wrap  sfml.wrap
